[gd_scene load_steps=7 format=3 uid="uid://dlhuc3rk04sxd"]

[ext_resource type="Script" path="res://player/ui/level_progress_bar/level_progress_bar.gd" id="1_beipc"]
[ext_resource type="PackedScene" uid="uid://d0rxes24ugjl" path="res://player/ui/hearts/hearts.tscn" id="2_gxr68"]

[sub_resource type="Theme" id="Theme_bvwb1"]
default_font_size = 9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r2qdg"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0upqy"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_ag1af"]
default_font_size = 8

[node name="LevelProgressBar" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 0
theme = SubResource("Theme_bvwb1")
alignment = 2

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 14
text = "L"

[node name="PlayerLevel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 14
horizontal_alignment = 2
vertical_alignment = 2

[node name="Lev" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="ProgressBar" type="ProgressBar" parent="Lev"]
layout_mode = 2
size_flags_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_r2qdg")
theme_override_styles/fill = SubResource("StyleBoxFlat_0upqy")
step = 1.0
show_percentage = false
script = ExtResource("1_beipc")

[node name="HBoxContainer2" type="HBoxContainer" parent="Lev"]
layout_mode = 2
size_flags_vertical = 3

[node name="Hearts" parent="Lev/HBoxContainer2" instance=ExtResource("2_gxr68")]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Lev/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Lev/HBoxContainer2/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = SubResource("Theme_ag1af")
alignment = 1

[node name="CurrentKills" type="Label" parent="Lev/HBoxContainer2/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Delimiter" type="Label" parent="Lev/HBoxContainer2/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="KillsNeeded" type="Label" parent="Lev/HBoxContainer2/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
